# stm32f1test

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
